# fiere

./: .env  .gitignore  Cargo.toml  config.json  server.db
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/sql/: get_expired_file.sql  get_file.sql  get_filepart.sql  insert_filepart.sql  migrate.sql  prepare.sql  status.sql  submit.sql  suppress_file_part_expired.sql
server/src/: main.rs  payload.rs
