[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.130", features = ["derive"] }
md5 = "0.7.0"
colored = "2.0.0"
serde_json = "1.0.93"
indicatif = {version = "*", features = ["rayon"]}
clap = {version = "4.1.6", features = ["derive"]}