[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0",features = ["derive"] }
sqlx = { version = "0.6.2", features = ["sqlite", 'runtime-actix-rustls'] }
serde_json = "1.0.93"
actix-multipart = "0.5.0"
futures-util = "0.3.26"
md5 = "0.7.0"
actix-files = "0.6.2"
actix-rt = "2.8.0"
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
